--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" type="image/webp" href="assets/images/fav.webp">
+    <link rel="icon" type="image/webp" href="./assets/images/fav.webp">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>GlobalGlide</title>
@@ -151,14 +151,14 @@
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
     <!-- Point of interest, restaurant -->
-    <script type="text/javascript" src="assets/js/citiesofcountry.js"></script>
-    <script type="text/javascript" src="assets/js/currency.js"></script>
-    <script type="text/javascript" src="assets/js/poi.js"></script>
-    <script type="text/javascript" src="assets/js/photo.js"></script>
-    <script type="text/javascript" src="assets/js/map.js"></script>
-    <script type="text/javascript" src="assets/js/airports.js"></script>
+    <script type="text/javascript" src="./assets/js/citiesofcountry.js"></script>
+    <script type="text/javascript" src="./assets/js/currency.js"></script>
+    <script type="text/javascript" src="./assets/js/poi.js"></script>
+    <script type="text/javascript" src="./assets/js/photo.js"></script>
+    <script type="text/javascript" src="./assets/js/map.js"></script>
+    <script type="text/javascript" src="./assets/js/airports.js"></script>
 </body>
 
 </html>
