--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" type="image/webp" href="./Assets/images/fav.webp">
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="icon" type="image/webp" href="./fav.webp">
+    <link rel="stylesheet" href="./style.css">
 
     <title>GlobalGlide</title>
 </head>
@@ -151,7 +151,7 @@
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
-    <script type="text/javascript" src="./script.js"></script>
+    <script  src="./script.js"></script>
     <!-- Point of interest, restaurant -->
     <script src="./citiesofcountry.js"></script>
     <script  src="./currency.js"></script>
